results/SVCOMP/specgen/log-ExLazy-2024_03_04_03_43_42.txt
class Main {

  //@ requires x == null && y == 0 || x != null;
  //@ ensures x == null && y == 0 ==> System.out.println(1);
  //@ ensures x != null ==> System.out.println(2);
  //@ signals_only AssertionError;
  public static void test(Main x, int y) {
    if (x == null && y == 0) {
      System.out.println(1);
    } else if (x != null) {
      System.out.println(2);
      assert false;
    }
  }

  //@ requires n1 == 0 || n1 != 0;
  //@ ensures n1 == 0 ==> test(null, 0);
  //@ ensures n1 != 0 ==> test(null, n2);
  public static void f(int n1, int n2) {
    if (n1 == 0) test(null, 0);
    else test(null, n2);
  }
}
/home/max/Documents/JMLGPT/tmp/ExLazy.java:4: error: incompatible types: void cannot be converted to boolean
  //@ ensures x == null && y == 0 ==> System.out.println(1);
                                                        ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:5: error: incompatible types: void cannot be converted to boolean
  //@ ensures x != null ==> System.out.println(2);
                                              ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:17: error: incompatible types: void cannot be converted to boolean
  //@ ensures n1 == 0 ==> test(null, 0);
                              ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:18: error: incompatible types: void cannot be converted to boolean
  //@ ensures n1 != 0 ==> test(null, n2);
                              ^
4 errors

class Main {

  //@ requires x == null && y == 0 || x != null;
  //@ ensures x == null && y == 0 ==> true;
  //@ ensures x != null ==> true;
  //@ signals_only AssertionError;
  public static void test(Main x, int y) {
    if (x == null && y == 0) {
      System.out.println(1);
    } else if (x != null) {
      System.out.println(2);
      assert false;
    }
  }

  //@ requires n1 == 0 || n1 != 0;
  //@ ensures n1 == 0 ==> true;
  //@ ensures n1 != 0 ==> true;
  public static void f(int n1, int n2) {
    if (n1 == 0) test(null, 0);
    else test(null, n2);
  }
}
